add modal file//add methods to context file//add onclick functions to details-product files//add import in appjs//add class to appCSS

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@ body {
   color: var(--mainDark) !important;
 }
 
+.marginBottom {
+  margin-bottom: 0.2rem !important;
+}
+
 .text-title {
   font-family: "Permanent Marker", cursive;
   letter-spacing: 0.3rem;
